# binggan

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  test.sh
.github/workflows/: ci.yml
benches/: bench.rs  bench_group.rs  bench_input.rs  fibonacci_bench.rs  test_bench.rs  test_regular_bench.rs  test_throughput.rs
src/: bench.rs  bench_group.rs  bench_id.rs  bench_input_group.rs  bench_runner.rs  config.rs  events.rs  filter.rs  format.rs  lib.rs  output_value.rs  profiler.rs  report.rs  stats.rs  write_results.rs
src/plugins/: alloc.rs  bpu_trasher.rs  cache_trasher.rs  events.rs  mod.rs
src/plugins/perf_counter/: dummy.rs  linux.rs  mod.rs
src/plugins/profiler/: dummy_profiler.rs  mod.rs  perf_profiler.rs
src/profiler/: dummy_profiler.rs  mod.rs  perf_profiler.rs
src/report/: format.rs  mod.rs  plain_reporter.rs  table_reporter.rs
