[package]
name = "binggan"
version = "0.8.0"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2021"
homepage = "https://github.com/pseitz/binggan"
repository = "https://github.com/pseitz/binggan"
description = "Benchmarking library for stable Rust"
readme = "README.md"
keywords = ["perf", "profiler", "benchmark", "memory"]
categories = ["development-tools::profiling"]
license = "MIT"
exclude = ["*logo*"]

[lints.clippy]
cargo        = { priority = -1, level = "deny" }
complexity   = { priority = -1, level = "deny" }
correctness  = { priority = -1, level = "deny" }
perf         = { priority = -1, level = "deny" }
style        = { priority = -1, level = "deny" }
suspicious   = { priority = -1, level = "deny" }

[dependencies]
alloca = "0.4.0"
miniserde = "0.1.38"
peakmem-alloc = "0.3.0"
#prettytable-rs = "0.10.0"
unicode-width = "0.1.11"
yansi = { version = "1.0.1", features = ["detect-env", "detect-tty"] }
rustop = "=1.1.4"

[target.'cfg(target_os = "linux")'.dependencies]
perf-event = { version = "0.4.8" }

[features]
real_blackbox = []
# Enable perf profiler integration
default = []

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "bench_group"
harness = false

[[bench]]
name = "bench_input"
harness = false


