[package]
name = "binggan"
version = "0.12.0"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2021"
homepage = "https://github.com/pseitz/binggan"
repository = "https://github.com/pseitz/binggan"
description = "Benchmarking library for stable Rust"
readme = "README.md"
keywords = ["perf", "profiler", "benchmark", "memory"]
categories = ["development-tools::profiling"]
license = "MIT"
exclude = ["*logo*"]
rust-version = "1.66"

[lints.clippy]
cargo        = { priority = -1, level = "deny" }
complexity   = { priority = -1, level = "deny" }
correctness  = { priority = -1, level = "deny" }
perf         = { priority = -1, level = "deny" }
style        = { priority = -1, level = "deny" }
suspicious   = { priority = -1, level = "deny" }

# docs.rs-specific configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
alloca = "0.4.0"
miniserde = "0.1.38"
peakmem-alloc = "0.3.0"
prettytable-rs = {version = "0.10.0", optional = true}
unicode-width = "0.1.11"
yansi = { version = "1.0.1", features = ["detect-env", "detect-tty"] }
rustop = "=1.1.4"
rustc-hash = "2.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
perf-event = { version = "0.4.8" }

[features]
real_blackbox = []
table_reporter = ["prettytable-rs"]
default = []

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "bench_group"
harness = false

[[bench]]
name = "bench_input"
harness = false

[[bench]]
name = "test_throughput"
harness = false

